tests/samples/negative/types/strraw_return_slice_call_local.ax
module strraw_return_slice_call_local;

fn identity(values: []u8) -> []u8 {
    return values;
}

unsafe fn bad() -> str {
    let bytes: [2]u8 = b"ok";
    return strraw(sliceptr(identity(bytes[:])), slicelen(bytes[:]));
}

fn main() -> i32 {
    return 0;
}
